<resources>
    <string name="app_name">TP-Link Man</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chanel">Chanel</string>
    <string name="regional">Regional</string>
    <string name="password">Password</string>
    <string name="info_build">Build</string>
    <string name="info_version">Version</string>
    <string name="info_mac">Mac address</string>
    <string name="info_ssid">SSID:</string>
    <string name="info_pass">Password wifi:</string>

    <string name="dynIP">Dynamic IP</string>
    <string name="statIP">Static IP</string>
    <string name="pptp">PPTP</string>
    <string name="ppoe">PPOE</string>

    <string name="ip">IP</string>
    <string name="gateway">Gateway</string>
    <string name="mask">Mask</string>
    <string name="dns1">Primary DNS</string>
    <string name="dns2">Secondary DNS</string>
    <string name="vpn">Vpn server</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="enter_settings">Enter settings</string>
    <string name="set_suc_applied">Settings successfully applied</string>
    <string name="wireless_settings">Wireless settings</string>
    <string name="internet_settings">Internet settings</string>
    <string name="dhcp_settings">DHCP settings</string>
    <string name="remote_access">Remote access</string>
    <string name="reboot_router">Reboot router</string>
    <string name="more">More</string>
    <string name="wireless_information">Wireless information</string>
    <string name="ssid">SSID:</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>

    <string name="alert_message">Do you want reboot router?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="main_wi_fi_2_4_ghz">Main Wi-fi 2.4 GHz</string>
    <string name="dialog_applay">Applying new parameters …</string>
    <string name="setting_apply">Settings successfully applied</string>
    <string name="error">Error</string>
    <string name="local_device">Connected device</string>
    <string name="not_found">Not found</string>
    <string name="ip_address">IP address</string>
    <string name="remote_conect_to">Connection to …</string>
    <string name="name_connection">Name connection (optional)</string>
    <string name="remote_ip">Remote ip</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="connecting">Connecting …</string>
    <string name="host_is_unreachable">Host is unreachable</string>
    <string name="error_input_data">Error input username or password</string>
    <string name="try_again_later">Please try again later</string>
    <string name="reboot_success">Reboot success</string>
    <string name="reboot_error">Reboot error. Try again.</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="type_dynamic_ip">Dynamic IP</string>
    <string name="type_static_ip">Static IP</string>
    <string name="type_pptp">PPTP</string>
    <string name="type_ppoe">PPOE</string>
    <string name="save_settings">Save settings</string>

    <string name="success_apply_wan">Success apply new type wan.</string>
    <string name="error_apply_wan">Error. Try Again.</string>
    <string name="menu_block_list">Block list</string>
    <string name="no_blocked_devices">No blocked devices</string>
    <string name="success_unblock">Success unblock - </string>
    <string name="success_block">Success block - </string>
    <string name="mac_is_not_valid">Mac address is not valid!</string>

    <string name="error_toast">Error. Try Again.</string>
    <string name="dialog_unblock">UnBlock</string>
    <string name="dialog_block">Block</string>
    <string name="dialog_title_block">Block device</string>
    <string name="do_you_want_unblocked">Do you want unblocked</string>
    <string name="reason_for_blocking">Reason for blocking</string>
    <string name="logout_success">Logout success</string>
    <string name="save_connection">Save connection</string>
    <string name="dialog_save">Save</string>
    <string name="do_you_want_delete">Do you want delete this session?</string>
    <string name="do_you_want_delete_group">Do you want delete this group?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_add">Add</string>
    <string name="edit_session">Edit session</string>
    <string name="add_host_to_group">Add host to</string>
    <string name="default_group">Default group</string>
    <string name="add_new_group">Add new group</string>
    <string name="group_name">Group name</string>
    <string name="delete_group">Delete group</string>
    <string name="reboot_routers">Reboot routers</string>
    <string name="block_mac_address">Block mac address</string>
    <string name="you_dont_del_this_group">You don\'t delete this group</string>
    <string name="you_haven_t_created_groups_yet">You haven\'t created groups yet.\n\nClick \"+\" for create new group!</string>

    <string-array name="typeWan">
        <item>Dynamic IP</item>
        <item>Static IP</item>
        <item>PPTP</item>
        <item>PPOE</item>


    </string-array>

    <string-array name="listRegion">
        <item>Ukraine</item>
        <item>USA</item>
        <item>Russia</item>
    </string-array>

    <string-array name="listChanel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>auto</item>
    </string-array>


</resources>
