<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="@dimen/size_wan_et" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilMask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etMask"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mask"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="@dimen/size_wan_et" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilGateway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etGateway"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gateway"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="@dimen/size_wan_et" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDns1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dns1"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="@dimen/size_wan_et" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDns2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dns2"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textSize="@dimen/size_wan_et" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/save"
            style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/enter_settings"
            android:textColor="@color/accent"
            android:textStyle="bold"

            />
    </RelativeLayout>


</LinearLayout>